--- a/devfile.yaml
+++ b/devfile.yaml
@@ -3,9 +3,15 @@ apiVersion: 1.0.0
 metadata:
   name: xpress
 components:
-  -
+  - alias: theia-editor
     type: cheEditor
-    reference: https://raw.githubusercontent.com/cherxp/my-plugin-registry/master/meta.yaml
+    id: eclipse/che-theia/next
   -  
-    type: chePlugin
-    reference: https://raw.githubusercontent.com/cherxp/my-plugin-registry/master/meta-mplab-rest-server.yaml
+    type: dockerimage
+    alias: mcc-interface
+    image: 879521958254.dkr.ecr.us-east-1.amazonaws.com/mcc-interface:latest
+    memoryLimit: 1024Mi
+    endpoints:
+      - name: 'helloworld'
+        port: 1234
+    mountSources: true
