--- a/devfile-mcc-interface-test.yaml
+++ b/devfile-mcc-interface-test.yaml
@@ -9,7 +9,7 @@ components:
   -  
     type: dockerimage
     alias: mcc-interface
-    image: 879521958254.dkr.ecr.us-east-1.amazonaws.com/mcc-interface12:latest
+    image: 879521958254.dkr.ecr.us-east-1.amazonaws.com/che-devfile-registry20:latest
     memoryLimit: 1024Mi
     endpoints:
       - name: 'helloworld'
