--- a/devfile-mcc-interface-test.yaml
+++ b/devfile-mcc-interface-test.yaml
@@ -3,10 +3,8 @@ apiVersion: 1.0.0
 metadata:
   name: xpress
 components:
-  - alias: theia-editor
+  - id: eclipse/che-theia/latest
     type: cheEditor
-    id: eclipse/che-theia/next
-  -  
   - type: dockerimage
     alias: workspace-access
     image: 879521958254.dkr.ecr.us-east-1.amazonaws.com/workspace-access-service1:latest
