--- a/devfile-single.yaml
+++ b/devfile-single.yaml
@@ -3,7 +3,9 @@ apiVersion: 1.0.0
 metadata:
   generateName: xpress-
 projects:
-  - source:
+  - 
+    name: cpp-hello-world
+    source:
       type: git
       location: 'https://github.com/che-samples/cpp-hello-world'
 components:
