--- a/devfile-single.yaml
+++ b/devfile-single.yaml
@@ -3,8 +3,7 @@ apiVersion: 1.0.0
 metadata:
   generateName: xpress-
 projects:
-  - 
-    name: cpp-hello-world
+  - name: cpp-hello-world
     source:
       type: git
       location: 'https://github.com/che-samples/cpp-hello-world'
