--- a/xpresside.yaml
+++ b/xpresside.yaml
@@ -2,6 +2,12 @@
 apiVersion: 1.0.0
 metadata:
   name: xpress
+projects:
+  -
+    name: cpp-hello-world
+    source:
+      type: git
+      location: 'https://github.com/che-samples/cpp-hello-world'
 components:
   - type: cheEditor
     reference: >-
