--- a/dashboard-devfile.yaml
+++ b/dashboard-devfile.yaml
@@ -12,7 +12,7 @@ components:
     id: eclipse/che-machine-exec-plugin/0.0.1
   - alias: dash-dev
     type: dockerimage
-    image: 'eclipse/che-dashboard-dev:nightly'
+    image: localhost:5000/che-dashboard-dev:latest
     endpoints:
       - name: dashboard-dev-server
         port: 3000
