--- a/discover.yaml
+++ b/discover.yaml
@@ -1,8 +1,14 @@
 ---
 apiVersion: 1.0.0
 metadata:
-  generateName: xpress-
-components:
+  name: xpress
+projects:
   -
-    type: cheEditor
-    reference: https://raw.githubusercontent.com/cherxp/my-plugin-registry/master/meta-xpress.yaml
+    name: xpress
+    source:
+      type: git
+      location: 'https://mplabxpress/project.git'
+components:
+  - type: cheEditor
+    reference: >-
+      https://raw.githubusercontent.com/Shashi0838/mplabx-meta-yaml/master/meta-xpress-ide-single.yaml
