--- a/mcc-docker-devfile.yaml
+++ b/mcc-docker-devfile.yaml
@@ -12,7 +12,7 @@ components:
 
   - alias: mcc
     type: dockerimage
-    image: 228724522458.dkr.ecr.us-west-2.amazonaws.com/mcc/xpress-plugin:latest
+    image: 453345707098.dkr.ecr.us-west-2.amazonaws.com/xpress/dev/mcc:latest
     volumes:
       - name: xpressprojects
         containerPath: /home/projects
