--- a/mcc-docker-devfile.yaml
+++ b/mcc-docker-devfile.yaml
@@ -24,4 +24,4 @@ components:
         attributes:
            protocol: ws
            secure: 'false'
-    memoryLimit: 1536M
+    memoryLimit: "2.5Gi"
