--- a/xpress-mcc.yaml
+++ b/xpress-mcc.yaml
@@ -8,7 +8,7 @@ components:
 
   - alias: mcc
     type: dockerimage
-    image: 453345707098.dkr.ecr.us-west-2.amazonaws.com/xpress/dev/mcc-24mar:latest
+    image: 453345707098.dkr.ecr.us-west-2.amazonaws.com/xpress/stage/mcc-v1.0.rc2-v2:latest
     volumes:
       - name: xpressprojects
         containerPath: /home/projects
